# ma_coupon_generator

./: .gitignore  Makefile  Procfile  local.env  manage.py  pyproject.toml  requirements.txt
coupons/: admin.py  apps.py  models.py
coupons/migrations/: 0001_initial.py  0002_alter_coupon_customer_cpf.py  0003_alter_coupon_customer_cpf.py
custom_user/migrations/: 0001_initial.py
maria_alice_coupon_generator/: asgi.py  settings.py  wsgi.py
templates/admin/: action_confirmation.html
