[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ""
known_localfolder = "tests,maria_alice_coupon_generator"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.poetry]
name = "maria_alice_coupon_generator"
version = "0.1.0"
description = ""
authors = ["Will <williamdeo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
prettyconf = "^2.2.1"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
django-extensions = "^3.1.3"
django-use-email-as-username = "^1.1.2"
django-jazzmin = "^2.4.8"
whitenoise = "^5.3.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


